[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-factory"
version = "0.1.0"
description = "A lightweight decorator-based package to capture and serialize LLM inputs, outputs, and LangChain callbacks into local JSONL datasets."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]
langchain = [
    "langchain",
    "langchain-community",
    "langchain-openai",
]

[project.scripts]
eval-factory = "eval_factory.visualize:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eval_factory*"]
